rétablissement de l'esthétique

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
     <body id="main">
         <h1 >Jouez à Puissance 4!</h1>
 
-        <button type="button" id="jouer"> Jouer</button>
-        
+       <div id="positionnement_rejouer"></div>
+        <div id="positionnement_jouer">
+        <button type="submit" class="button" id="jouer"style="text-align:center;">Jouer!</button>
         <hr>
 
         <script type="text/javascript" src="puissance.js"> </script>
