--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,12 @@
     <body id="main">
         <h1 >Jouez à Puissance 4!</h1>
 
-       <div id="positionnement_rejouer"></div>
-        <div id="positionnement_jouer">
-        <button type="submit" class="button" id="jouer"style="text-align:center;">Jouer!</button>
+
+
+
+        <div id="positionnement_jouer"><button type="submit" class="button" id="jouer"style="text-align:center;">Jouer!</button> </div>
+        <div id="positionnement_rejouer"></div>
+        
         <hr>
 
         <script type="text/javascript" src="puissance.js"> </script>
