--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <hr>
 
         <script type="text/javascript" src="puissance.js"> </script>
-        <div id="game">
+        <div id="game"></div>
         <aside>
         <div id="Chat">
             <ul>
@@ -35,7 +35,7 @@
         
 
     
-</div>
+
 
     </body>
 </html>
